# analogdata-esp

./: .coverage  .env.example  README.md  analogdata-esp.spec  pyproject.toml
.github/workflows/: release.yml
analogdata_esp/: main.py
analogdata_esp/agent/: context.py  router.py  tools.py
analogdata_esp/agent/providers/: anthropic_provider.py  base.py  gemini.py  ollama.py  openai_provider.py
analogdata_esp/commands/: agent.py  build.py  config.py  doctor.py  new.py  shell.py
analogdata_esp/core/: config.py  idf_runner.py  settings.py  template.py
developer_docs/: README.md  debian-apt.md  github-release.md  homebrew-tap.md  rebuild.md
docs/: GITHUB_SETUP.md  mkdocs.yml
docs/docs/: index.md
docs/docs/agent/: cloud.md  local.md  overview.md
docs/docs/commands/: agent.md  doctor.md  new.md
docs/docs/configuration/: ai-providers.md  idf-setup.md  index.md
docs/docs/development/: testing.md
docs/docs/getting-started/: install.md  local-install.md  quickstart.md
docs/docs/packaging/: linux.md  macos.md  overview.md  windows.md
packaging/: build_release.sh
packaging/debian/: build-deb.sh  control
packaging/homebrew/: analogdata-esp.rb
packaging/windows/: installer.nsi
scripts/: build-local.sh  update-homebrew-formula.sh
templates/esp32-default/: .clangd
templates/esp32-default/main/: main.c
tests/: conftest.py  test_build_commands.py  test_config.py  test_context.py  test_providers.py  test_router.py  test_settings.py  test_template.py
